# mediengruppe-bayern-pipeline

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
kubernetes/prod/: pipeline-cronjob-for-reliability.yaml  pipeline-cronjob.yaml
kubernetes/test/: pipeline-cronjob.yaml
src/: ai_engine_connector.py  article_crawler.py  article_selection.py  constants.py  rss_consumer.py  schemas.py  strapi_connector.py  utils.py
