[tool.poetry]
name = "mediengruppe-bayern-pipeline"
version = "0.1.0"
description = "Pipeline for the transcript creation of the mediengruppe-bayern usecase."
authors = ["sakshiAtArticly <sakshi@articly.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
feedparser = "^6.0.11"
pydantic = "^2.10.6"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
